--- a/.github/workflows/add_wip_label.yml
+++ b/.github/workflows/add_wip_label.yml
@@ -1,4 +1,4 @@
-name: "Add WIP Label"
+name: "Add WIP Label && Remove Review Label"
 
 on:
   pull_request:
@@ -9,6 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: |
+            👀 needs review
       - uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
