--- a/.github/workflows/add_wip_label.yml
+++ b/.github/workflows/add_wip_label.yml
@@ -1,21 +1,21 @@
-# name: "Add WIP Label && Remove Review Label"
+name: "Add WIP Label && Remove Review Label"
 
-# on:
-#   pull_request:
-#     types: [opened, converted_to_draft]
-# jobs:
-#   add_wip_label:
-#     if: github.event.pull_request.draft == true
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions-ecosystem/action-remove-labels@v1
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           labels: |
-#             👀 needs review
-#       - uses: actions-ecosystem/action-add-labels@v1
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           labels: |
-#             ⚠ wip
+on:
+  pull_request:
+    types: [opened, converted_to_draft]
+jobs:
+  add_wip_label:
+    if: github.event.pull_request.draft == true
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: |
+            👀 needs review
+      - uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: |
+            ⚠ wip
